# 06a._WebSocket_Example

./: README.md
python_websocket/: README.md  connection_manager.py  main.py  pyproject.toml
python_websocket/public/: index.html  index.js
