[tool.poetry]
name = "python-websocket"
version = "0.1.0"
description = ""
authors = ["Marcus <marc303i@stud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
jinja2 = "^3.1.6"
websockets = "^15.0.1"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
